--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -849,9 +849,6 @@ DeleteCheckedTransactionAlert.message=Vous êtes sur le point de supprimer une op
 DeleteTransactionAlert.title=Suppression d'une opération
 DeleteTransactionAlert.message=Vous êtes sur le point de supprimer une opération.
 
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
-
 # This new preference dialog tab allows the user to set what is remembered between Yapbam launches
 PreferencesDialog.StartState.title=Etat au lancement
 PreferencesDialog.StartState.tooltip=Cet onglet permet de régler les informations à conserver entre deux exécution de Yapbam
@@ -923,7 +920,38 @@ openDialog.targetDoesntExist=La cible du raccourci sélectionné n'existe pas
 MainMenu.Transactions.Periodical.disabled.tooltip.line1=Cet élément est désactivé car aucune opération périodique n'est définie
 MainMenu.Transactions.Periodical.disabled.tooltip.line2=Les opérations périodiques peuvent être définies dans la partie "{0}" de l''onglet "{1}".
 
+#---------------------------------
+#Error messages when the proxy configuration entered in the preference panel is wrong
+PreferencesDialog.Network.proxyNameMissing=Le nom du serveur proxy est vide dans l''onglet "{0}"
+PreferencesDialog.Network.invalidPort=Le numéro de port du proxy est en dehors des limites dans l''onglet "{0}" (le maximum est {1})
+
+#---------------------------------
+#Error message when the last opened file is no more available
+MainFrame.LastNotFound=Le dernier fichier ouvert ({0}) est introuvable
+
+#----------------------------------
+MainMenu.CheckUpdate.Success.systemProtected=<html>Votre version : <B>{0}</B><BR>Version à jour : <B>{1}</B><BR><BR>Yapbam ne peut se mettre à jour automatiquement car son répertoire d''installation est protégé par le système (par exemple par le contrôle des comptes utilisateurs de Windows).<br><br>Vous devrez donc appliquer cette mise à jour manuellement à l''aide de l''installeur.<br><br>Celui-ci, ainsi que les notes de mise à jour, est disponible à <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.writeProtected=<html>Votre version : <B>{0}</B><BR>Votre version : <B>{1}</B><BR><BR>Yapbam ne peut se mettre à jour automatiquement car son répertoire d''installation est protégé en écriture.<br><br>Cette nouvelle version et les notes de mise à jour sont disponibles à <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.openSite=Ouvrir le site web de Yapbam
+
+#----------------------------------
+#New dialog to enter a transfer between two accounts
+TransferDialog.menu=New transfer
+TransferDialog.title=New transfer
+TransferDialog.needsTwoAccounts=Creating a transfer requires at least two accounts
+TransferDialog.amount=Enter the transfer amount here
+TransferDialog.from.account.tooltip=Sélectionnez le compte de départ dans ce menu
+TransferDialog.to.account.tooltip=Sélectionnez le compte de d'arrivée dans ce menu
+TransferDialog.from.valueDate.tooltip=Entrez ici la date de valeur pour le compte de départ
+TransferDialog.to.valueDate.tooltip=Entrez ici la date de valeur pour le compte d'arrivée
+TransferDialog.from.title=From
+TransferDialog.to.title=to
+TransferDialog.error.accountAreEquals=Both accounts are the same
+TransferDialog.error.amountIsNotPositive=The transfer's amount can't be null or negative
+TransferDialog.errorValueDate=The value date in the "{0}" panel is wrong
+
 #------------------------------------------------------
+#Backup preference panel (This functionnality is not yet implemented)
 Backup.preference.title=Sauvegardes
 Backup.preference.tooltip=Cet onglet permet de paramétrer les sauvegardes automatiques
 Backup.preference.activate=Activer les sauvegardes automatiques
@@ -957,13 +985,3 @@ Backup.preference.ftp.server.missing=Le nom du serveur FTP n''est pas renseigné 
 Backup.preference.ftp.user.missing=Le nom d''utilisateur n''est pas renseigné dans l''onglet "{0}"
 Backup.preference.ftp.invalidPort=Le numéro de port ftp est en dehors des limites dans l''onglet "{0}" (le maximum est {1})
 
-#---------------------------------
-PreferencesDialog.Network.proxyNameMissing=Le nom du serveur proxy est vide dans l''onglet "{0}"
-PreferencesDialog.Network.invalidPort=Le numéro de port du proxy est en dehors des limites dans l''onglet "{0}" (le maximum est {1})
-
-MainFrame.LastNotFound=Le dernier fichier ouvert ({0}) est introuvable
-
-#----------------------------------
-MainMenu.CheckUpdate.Success.systemProtected=<html>Votre version : <B>{0}</B><BR>Version à jour : <B>{1}</B><BR><BR>Yapbam ne peut se mettre à jour automatiquement car son répertoire d''installation est protégé par le système (par exemple par le contrôle des comptes utilisateurs de Windows).<br><br>Vous devrez donc appliquer cette mise à jour manuellement à l''aide de l''installeur.<br><br>Celui-ci, ainsi que les notes de mise à jour, est disponible à <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.writeProtected=<html>Votre version : <B>{0}</B><BR>Votre version : <B>{1}</B><BR><BR>Yapbam ne peut se mettre à jour automatiquement car son répertoire d''installation est protégé en écriture.<br><br>Cette nouvelle version et les notes de mise à jour sont disponibles à <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.openSite=Ouvrir le site web de Yapbam
