--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -441,7 +441,7 @@ AccountManager.transactionsNumber.toolTip=Contém o número de transações nesta co
 AccountManager.error.message.alreadyUsed=Conta não pode ser renomeada; a conta "{0}" já existe
 AccountManager.error.message.empty=O nome da conta não poder ficar em branco
 AccountManager.error.title=Nome da conta está incorreto
-AccountManager.modesNumber.titleNúmero de modos de pagamento
+AccountManager.modesNumber.title=Número de modos de pagamento
 AccountManager.modesNumber.toolTip=Esta coluna contém o número de modos de pagamento anexado nesta conta
 AccountManager.checkbooksNumber.title=Número de livro-cheque
 AccountManager.checkbooksNumber.toolTip=Esta coluna contém o número de livro-cheque anexado nesta conta
@@ -920,7 +920,6 @@ MainFrame.BalancePanel.Relative.ToolTip=<b>AVISO</b>: Este campo contém valor re
 #Uma nova dica explicando todas estas coisas!
 Tip.9=<html>Yapbam pode exibir o sumário do saldo relativo.<hr style="width:40%">Você pode selecionar um dos saldos exibidos na parte inferior da <b>{0}</b> guia clicando nele. Os saldos remanescentes serão então calculados em relação a esta referência.</html>
 
-
 #-------------------------------------------------------
 # Added or modified since last translation
 ImportDialog.error.emptyFile=O arquivo importado está vazio
@@ -935,7 +934,66 @@ MainMenu.Transactions.Periodical.disabled.tooltip.line1=Este elemento é cinza po
 MainMenu.Transactions.Periodical.disabled.tooltip.line2=Transações periódicas podem ser definidas em "{0}" parte do "{1}" painel.
 
 #---------------------------------
+#Error messages when the proxy configuration entered in the preference panel is wrong
+PreferencesDialog.Network.proxyNameMissing=The proxy host name is not entered in the "{0}" tab
+PreferencesDialog.Network.invalidPort=The proxy port is out of range in the "{0}" tab (maximum is {1})
+
+#---------------------------------
+MainFrame.LastNotFound=The last opened file ({0}) does not exist anymore
+
+#---------------------------------
 # New dialogs when an update is available but can't be installed (yapbam installatio directory is write protected).
 MainMenu.CheckUpdate.Success.systemProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is protected by the system (maybe windows UAC ?).<br><br>You''ll have to install this update manually using the installer.<br><br>This installer and the release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.writeProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is write protected.<br><br>The new version and its release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.openSite=Open Yapbam's web site
+
+#----------------------------------
+#New dialog to enter a transfer between two accounts
+TransferDialog.menu=New transfer
+TransferDialog.title=New transfer
+TransferDialog.needsTwoAccounts=Creating a transfer requires at least two accounts
+TransferDialog.amount=Enter the transfer amount here
+TransferDialog.from.account.tooltip=Sélectionnez le compte de départ dans ce menu
+TransferDialog.to.account.tooltip=Sélectionnez le compte de d'arrivée dans ce menu
+TransferDialog.from.valueDate.tooltip=Entrez ici la date de valeur pour le compte de départ
+TransferDialog.to.valueDate.tooltip=Entrez ici la date de valeur pour le compte d'arrivée
+TransferDialog.from.title=From
+TransferDialog.to.title=to
+TransferDialog.error.accountAreEquals=Both accounts are the same
+TransferDialog.error.amountIsNotPositive=The transfer's amount can't be null or negative
+TransferDialog.errorValueDate=The value date in the "{0}" panel is wrong
+
+#---------------------------------
+#Backup preference panel (This functionnality is not yet implemented)
+Backup.preference.title=Backups
+Backup.preference.tooltip=This tab allows you to configure the automatic backup of your data
+Backup.preference.activate=Enable automatic backups
+Backup.preference.activate.tooltip=Check this box to enable automatic backups
+Backup.preference.helpButton.toolTip=Click this to get help on automatic backup
+Backup.preference.disk.disk=Disk-based
+Backup.preference.disk.disk.tooltip=Select this option to perform your backups on a disk on your computer or a USB key
+Backup.preference.disk.select=Select
+Backup.preference.disk.select.tooltip=Click this button to choose where to save your data
+Backup.preference.ftp.ftp=FTP
+Backup.preference.ftp.ftp.tooltip=Select this to backup to a FTP server
+Backup.preference.ftp.server=Server:
+Backup.preference.ftp.server.tooltip=Enter the ftp host name
+Backup.preference.ftp.directory=Directory:
+Backup.preference.ftp.directory.tooltip=Enter the remote directory path where to store your data
+Backup.preference.ftp.user.tooltip=Enter the account used to connect to server
+Backup.preference.ftp.password.tooltip=Enter the password for the account
+Backup.preference.maxSize=Maximum disk space dedicated to backups:
+Backup.preference.maxSize.unit=MB
+Backup.preference.maxSize.tooltip=<html>Enter the maximum disk space dedicated to bakcups.<br>Once the limit is reached, the oldest backups will be deleted.<br><br>Leave this field blank to not limit the space dedicated to backups.</html>
+
+Backup.preference.ftp.port.tooltip=Enter the port number here
+Backup.preference.compress=Compress backup files
+Backup.preference.compress.tooltip=Select this option to compress the backup files in zip format
+Backup.preference.disk.default=Default
+Backup.preference.disk.default.tooltip=Sets the backup location to its default value: {0}
+Backup.preference.disk.location=Location:
+Backup.preference.ftp.server.missing=The FTP server name is empty in the "{0}" tab
+Backup.preference.ftp.user.missing=The user name is empty in the "{0}" tab
+Backup.preference.ftp.invalidPort=The ftp port is out of range in the "{0}" tab (maximum is {1})
+
+
