--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -969,3 +969,20 @@ MainMenu.CheckUpdate.Success.openSite=Yapbam Webseite \u00f6ffnen
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
+#----------------------------------
+#New dialog to enter a transfer between two accounts
+TransferDialog.menu=New transfer
+TransferDialog.title=New transfer
+TransferDialog.needsTwoAccounts=Creating a transfer requires at least two accounts
+TransferDialog.amount=Enter the transfer amount here
+TransferDialog.from.account.tooltip=Sélectionnez le compte de départ dans ce menu
+TransferDialog.to.account.tooltip=Sélectionnez le compte de d'arrivée dans ce menu
+TransferDialog.from.valueDate.tooltip=Entrez ici la date de valeur pour le compte de départ
+TransferDialog.to.valueDate.tooltip=Entrez ici la date de valeur pour le compte d'arrivée
+TransferDialog.from.title=From
+TransferDialog.to.title=to
+TransferDialog.error.accountAreEquals=Both accounts are the same
+TransferDialog.error.amountIsNotPositive=The transfer's amount can't be null or negative
+TransferDialog.errorValueDate=The value date in the "{0}" panel is wrong
+
+
