--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -690,8 +690,7 @@ FilePasswordDialog.setPassword.warning=<html><b>ATTENTION :</b><br>Si vous perde
 FilePasswordDialog.openFile.question=<html>L'accès à ce fichier est protégé par mot de passe.<br>Tapez le mot de passe ci-dessous :</html>
 FilePasswordDialog.openFile.badPassword.question=<html>Le mot de passe que vous venez d'entrer est incorrect.<br>Tapez le mot de passe ci-dessous :</html>
 FilePasswordDialog.openFile.tooltip=Entrez le mot de passe ici
-FilePasswordDialog.confirm=Confirmation
-FilePasswordDialog.confirm=Confirmation du mot de passe
+FilePasswordDialog.confirm=Confirmation du mot de passe :
 FilePasswordDialog.confirm.tooltip=Retapez le mot de passe ici
 FilePasswordDialog.confirmIsNotOk=Le mot de passe et sa confirmation sont différents
 
@@ -959,8 +958,8 @@ Backup.preference.activate.tooltip=Cochez cette case pour activer les sauvegarde
 Backup.preference.helpButton.toolTip=Cliquez ici pour avoir de l'aide sur les sauvegardes
 Backup.preference.disk.disk=Sur disque
 Backup.preference.disk.disk.tooltip=Sélectionnez cette option pour effectuer vos sauvegardes sur un disque de votre ordinateur ou une clef USB
-Backup.preference.disk.default=Emplacement par défaut ({0})
-Backup.preference.disk.default.tooltip=Sélectionnez cette option pour sauvegarder dans le répertoire d'installation de Yapbam
+Backup.preference.disk.default=Défaut
+Backup.preference.disk.default.tooltip=Met le répertoire des sauvegarde à sa valeur par défaut : {0}
 Backup.preference.disk.select=Choisir
 Backup.preference.disk.select.tooltip=Cliquez sur ce bouton pour choisir l'emplacement où sauvegarder vos données
 Backup.preference.ftp.ftp=FTP
@@ -978,8 +977,6 @@ Backup.preference.maxSize.tooltip=<html>Entrez ici la l'espace maximum alloué au
 Backup.preference.ftp.port.tooltip=Entrez le port d'écoute du serveur Ftp (laissez ce champ vide pour utiliser le port par défaut).
 Backup.preference.compress=Compresser les sauvegardes
 Backup.preference.compress.tooltip=Sélectionnez cette option pour compresser les sauvegardes au format zip
-Backup.preference.disk.default=Défaut
-Backup.preference.disk.default.tooltip=Met le répertoire des sauvegarde à sa valeur par défaut : {0}
 Backup.preference.disk.location=Emplacement :
 Backup.preference.ftp.server.missing=Le nom du serveur FTP n''est pas renseigné dans l''onglet "{0}"
 Backup.preference.ftp.user.missing=Le nom d''utilisateur n''est pas renseigné dans l''onglet "{0}"
