--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -952,15 +952,15 @@ TransferDialog.menu=New transfer
 TransferDialog.title=New transfer
 TransferDialog.needsTwoAccounts=Creating a transfer requires at least two accounts
 TransferDialog.amount=Enter the transfer amount here
-TransferDialog.from.account.tooltip=Sélectionnez le compte de départ dans ce menu
-TransferDialog.to.account.tooltip=Sélectionnez le compte de d'arrivée dans ce menu
-TransferDialog.from.valueDate.tooltip=Entrez ici la date de valeur pour le compte de départ
-TransferDialog.to.valueDate.tooltip=Entrez ici la date de valeur pour le compte d'arrivée
+TransferDialog.from.account.tooltip=Select the source account in this menu
+TransferDialog.to.account.tooltip=Select the target account in this menu
+TransferDialog.from.valueDate.tooltip=Enter the value date for the source account
+TransferDialog.to.valueDate.tooltip=Enter the value date for the target account
 TransferDialog.from.title=From
 TransferDialog.to.title=to
-TransferDialog.error.accountAreEquals=Both accounts are the same
-TransferDialog.error.amountIsNotPositive=The transfer's amount can't be null or negative
-TransferDialog.errorValueDate=The value date in the "{0}" panel is wrong
+TransferDialog.error.accountAreEquals=This button is disabled because both accounts are the same
+TransferDialog.error.amountIsNotPositive=This button is disabled because the transfer's amount is null or negative
+TransferDialog.errorValueDate=This button is disabled because the value date in the "{0}" panel is wrong
 
 #---------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
