--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -971,18 +971,18 @@ MainMenu.CheckUpdate.Success.openSite=Yapbam Webseite \u00f6ffnen
 # Added or modified since last translation
 #----------------------------------
 #New dialog to enter a transfer between two accounts
-TransferDialog.menu=New transfer
-TransferDialog.title=New transfer
-TransferDialog.needsTwoAccounts=Creating a transfer requires at least two accounts
-TransferDialog.amount=Enter the transfer amount here
+TransferDialog.menu=Nouveau transfert
+TransferDialog.title=Nouveau transfert
+TransferDialog.needsTwoAccounts=Créer un transfert requiert au moins deux comptes
+TransferDialog.amount=Entrez le montant du transfert ici
 TransferDialog.from.account.tooltip=Sélectionnez le compte de départ dans ce menu
 TransferDialog.to.account.tooltip=Sélectionnez le compte de d'arrivée dans ce menu
 TransferDialog.from.valueDate.tooltip=Entrez ici la date de valeur pour le compte de départ
 TransferDialog.to.valueDate.tooltip=Entrez ici la date de valeur pour le compte d'arrivée
-TransferDialog.from.title=From
-TransferDialog.to.title=to
-TransferDialog.error.accountAreEquals=Both accounts are the same
-TransferDialog.error.amountIsNotPositive=The transfer's amount can't be null or negative
-TransferDialog.errorValueDate=The value date in the "{0}" panel is wrong
+TransferDialog.from.title=A partir
+TransferDialog.to.title=Vers
+TransferDialog.error.accountAreEquals=Ce bouton est désactivé car les comptes de départ et d'arrivée sont identiques
+TransferDialog.error.amountIsNotPositive=Ce bouton est désactivé car le montant du transfert est négatif ou nul
+TransferDialog.errorValueDate=Ce bouton est désactivé car la date de valeur dans le panneau "{0}" est incorrecte
 
 
