--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -985,4 +985,14 @@ TransferDialog.error.accountAreEquals=Ce bouton est désactivé car les comptes de
 TransferDialog.error.amountIsNotPositive=Ce bouton est désactivé car le montant du transfert est négatif ou nul
 TransferDialog.errorValueDate=Ce bouton est désactivé car la date de valeur dans le panneau "{0}" est incorrecte
 
+#----------------------------------
+#New preference sub-panel to set the background colors of the transaction table
+MainFrame.Transactions.Preferences.customBackground.title=Utiliser des couleurs de fond personnalisées
+MainFrame.Transactions.Preferences.customBackground.tooltip=Cochez cette case pour utiliser des couleurs personnalisées
+MainFrame.Transactions.Preferences.expenseSample=Dépense
+MainFrame.Transactions.Preferences.receiptSample=Recette
+MainFrame.Transactions.Preferences.changeExpenseBackground.title=Changer le fond pour les dépenses
+MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Cliquez ici pour choisir la couleur du fond pour les dépenses
+MainFrame.Transactions.Preferences.changeReceiptBackground.title=Changer le fond pour les recettes
+MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Cliquez ici pour choisir la couleur du fond pour les recettes
 
