--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -984,6 +984,10 @@ TransferDialog.to.title=Vers
 TransferDialog.error.accountAreEquals=Ce bouton est désactivé car les comptes de départ et d'arrivée sont identiques
 TransferDialog.error.amountIsNotPositive=Ce bouton est désactivé car le montant du transfert est négatif ou nul
 TransferDialog.errorValueDate=Ce bouton est désactivé car la date de valeur dans le panneau "{0}" est incorrecte
+#The two following lines are the description of the transactions
+#example: For a transfer from account A to B, the description of the transaction in A account will be "To B"
+TransferDialog.from.description=Vers {0}
+TransferDialog.to.description=De {0}
 
 #----------------------------------
 #New preference sub-panel to set the background colors of the transaction table
