--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -958,6 +958,10 @@ MainFrame.Transactions.Preferences.changeExpenseBackground.title=Changer le fond
 MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Cliquez ici pour choisir la couleur du fond pour les dépenses
 MainFrame.Transactions.Preferences.changeReceiptBackground.title=Changer le fond pour les recettes
 MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Cliquez ici pour choisir la couleur du fond pour les recettes
+#The two following lines are the description of the transactions
+#example: For a transfer from account A to B, the description of the transaction in A account will be "To B"
+TransferDialog.from.description=Vers {0}
+TransferDialog.to.description=De {0}
 
 #------------------------------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
