--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -972,6 +972,10 @@ MainFrame.Transactions.Preferences.changeExpenseBackground.title=Change expense 
 MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Click this button to choose the expense background
 MainFrame.Transactions.Preferences.changeReceiptBackground.title=Change receipt background
 MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Click this button to choose the reicept background
+#The two following lines are the description of the transactions
+#example: For a transfer from account A to B, the description of the transaction in A account will be "To B"
+TransferDialog.from.description=To {0}
+TransferDialog.to.description=From {0}
 
 #---------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
