--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -963,6 +963,11 @@ MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Cliquez ici p
 TransferDialog.from.description=Vers {0}
 TransferDialog.to.description=De {0}
 
+#----------------------------------
+#In the LaunchState tab of the preference panel, a new checkbox to remember how table rows are sorted 
+PreferencesDialog.startState.rowsSortKeys=Conserver l'ordre de tri des lignes
+PreferencesDialog.StartState.rowsSortKeys.tooltip=Cochez cette case pour que l'ordre de tri des lignes soit conservé d'une éxecution à l'autre
+
 #------------------------------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
 Backup.preference.title=Sauvegardes
