--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -977,6 +977,11 @@ MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Click this bu
 TransferDialog.from.description=To {0}
 TransferDialog.to.description=From {0}
 
+#----------------------------------
+#In the LaunchState tab of the preference panel, a new checkbox to remember how table rows are sorted 
+PreferencesDialog.startState.rowsSortKeys=Remember the sort order of rows
+PreferencesDialog.StartState.rowsSortKeys.tooltip=Check this box to remember row sort order between Yapbam launches
+
 #---------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
 Backup.preference.title=Backups
