--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -990,6 +990,11 @@ TransferDialog.from.description=Vers {0}
 TransferDialog.to.description=De {0}
 
 #----------------------------------
+#In the LaunchState tab of the preference panel, a new checkbox to remember how table rows are sorted 
+PreferencesDialog.startState.rowsSortKeys=Conserver l'ordre de tri des lignes
+PreferencesDialog.StartState.rowsSortKeys.tooltip=Cochez cette case pour que l'ordre de tri des lignes soit conservé d'une éxecution à l'autre
+
+#----------------------------------
 #New preference sub-panel to set the background colors of the transaction table
 MainFrame.Transactions.Preferences.customBackground.title=Utiliser des couleurs de fond personnalisées
 MainFrame.Transactions.Preferences.customBackground.tooltip=Cochez cette case pour utiliser des couleurs personnalisées
