--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -10,6 +10,8 @@ version	0.11.0 (04/13/2012)
 improvement
 	Adds an item to "Transactions" menu to create tranfers between accounts.
 	Background colors of the transaction table can now be customized.
+fix
+	It was possible, in the "Budget" tab, to select total rows/columns. Then, click the "Filter" button resulted in an error.
 
 version	0.10.1 (04/02/2012)
 fix
