--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -903,8 +903,8 @@ CustomFilterPanel.comment.regularExpression.toolTip=W\u00e4hlen Sie diese Option
 TextMatcherFilterPanel.invalidRegularExpression=Der Regul\u00e4re Ausdruck {0} ist falsch
 ExportDialog.columnsChangedMessage=<html>Die Anzahl der Eigenschaften von Zahlungsvorg\u00e4ngen hat sich seit dem letzten Export ge\u00e4ndert.<br>Es ist nicht m\u00f6glich, die Spalten f\u00fcr den Export wieder gleich einzustellen.<br><br>Bitte pr\u00fcfen Sie die Spaltenauswahl im folgenden Dialogfenster.</html>
 MainFrame.ReadLastFilterError=Der zuletzt verwendete Filter konnte nicht wiederhergestellt werden. Die Filtereinstellungen wurden zur\u00fcckgesetzt.
-MainFrame.SaveStateError=<html>Beim Speichern des aktuellen Zustands von Yapbam ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Datei {0} wird geschrieben</li><li>die Festplatte ist voll</li></ul></html>
-MainFrame.SavePreferencesError=<html>Beim Speichern der Einstellungen ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Datei {0} wird geschrieben</li><li>die Festplatte ist voll</li></ul></html>
+MainFrame.SaveStateError=<html>Beim Speichern des aktuellen Zustands von Yapbam ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Die datei {0} ist schreibgeschützt</li><li>die Festplatte ist voll</li></ul></html>
+MainFrame.SavePreferencesError=<html>Beim Speichern der Einstellungen ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Die datei {0} ist schreibgeschützt</li><li>die Festplatte ist voll</li></ul></html>
 
 #The balance fields in the transactions tab can now be selected.
 #Click on one of them selects it and makes it the reference. Others fields contain now value relative to this reference.
