--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -905,8 +905,8 @@ CustomFilterPanel.comment.regularExpression.toolTip=Selecione este se o comentár
 TextMatcherFilterPanel.invalidRegularExpression=A expressão regular {0} é incorreta
 ExportDialog.columnsChangedMessage=<html>A lista de atributos das transações mudou desde a última exportação.<br>Impossível para restaurar automaticamente a lista de colunas para exportar.<br><br>Não se esqueça de configurá-lo na caixa de diálogo seguinte.</html>
 MainFrame.ReadLastFilterError=Não é possível restaurar o filtro salvo. O filtro é limpo.
-MainFrame.SaveStateError=<html>Ocorreu um erro enquanto salvar o estado de Yapbam.<br><br>As causas mais comuns são:<ul><li> arquivo {0} é gravável</li><li>o disco está cheio</li></ul></html>
-MainFrame.SavePreferencesError=<html>Ocorreu um erro ao salvar as preferências.<br><br>As causas mais comuns são:<ul><li> arquivo {0} é gravável</li><li>o disco está cheio</li></ul></html>
+MainFrame.SaveStateError=<html>Ocorreu um erro enquanto salvar o estado de Yapbam.<br><br>As causas mais comuns são:<ul><li>O arquivo {0} é protegido contra gravação</li><li>o disco está cheio</li></ul></html>
+MainFrame.SavePreferencesError=<html>Ocorreu um erro ao salvar as preferências.<br><br>As causas mais comuns são:<ul><li>O arquivo {0} é protegido contra gravação</li><li>o disco está cheio</li></ul></html>
 
 #Os campos saldo na tabela de transações podem ser selecionados agora.
 #Clique em um campo para selecioná-lo e transforme-o em referência. Outros campos podem conter valores para esta referência.
