Added new german translations

--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -903,8 +903,8 @@ CustomFilterPanel.comment.regularExpression.toolTip=W\u00e4hlen Sie diese Option
 TextMatcherFilterPanel.invalidRegularExpression=Der Regul\u00e4re Ausdruck {0} ist falsch
 ExportDialog.columnsChangedMessage=<html>Die Anzahl der Eigenschaften von Zahlungsvorg\u00e4ngen hat sich seit dem letzten Export ge\u00e4ndert.<br>Es ist nicht m\u00f6glich, die Spalten f\u00fcr den Export wieder gleich einzustellen.<br><br>Bitte pr\u00fcfen Sie die Spaltenauswahl im folgenden Dialogfenster.</html>
 MainFrame.ReadLastFilterError=Der zuletzt verwendete Filter konnte nicht wiederhergestellt werden. Die Filtereinstellungen wurden zur\u00fcckgesetzt.
-MainFrame.SaveStateError=<html>Beim Speichern des aktuellen Zustands von Yapbam ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Die datei {0} ist schreibgeschützt</li><li>die Festplatte ist voll</li></ul></html>
-MainFrame.SavePreferencesError=<html>Beim Speichern der Einstellungen ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Die datei {0} ist schreibgeschützt</li><li>die Festplatte ist voll</li></ul></html>
+MainFrame.SaveStateError=<html>Beim Speichern des aktuellen Zustands von Yapbam ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Die datei {0} ist schreibgesch\u00fctzt</li><li>die Festplatte ist voll</li></ul></html>
+MainFrame.SavePreferencesError=<html>Beim Speichern der Einstellungen ist ein Fehler aufgetreten.<br><br>M\u00f6gliche Gr\u00fcnde sind:<ul><li>Die datei {0} ist schreibgesch\u00fctzt</li><li>die Festplatte ist voll</li></ul></html>
 
 #The balance fields in the transactions tab can now be selected.
 #Click on one of them selects it and makes it the reference. Others fields contain now value relative to this reference.
@@ -971,37 +971,37 @@ MainMenu.CheckUpdate.Success.openSite=Yapbam Webseite \u00f6ffnen
 # Added or modified since last translation
 #----------------------------------
 #New dialog to enter a transfer between two accounts
-TransferDialog.menu=Nouveau transfert
-TransferDialog.title=Nouveau transfert
-TransferDialog.needsTwoAccounts=Créer un transfert requiert au moins deux comptes
-TransferDialog.amount=Entrez le montant du transfert ici
-TransferDialog.from.account.tooltip=Sélectionnez le compte de départ dans ce menu
-TransferDialog.to.account.tooltip=Sélectionnez le compte de d'arrivée dans ce menu
-TransferDialog.from.valueDate.tooltip=Entrez ici la date de valeur pour le compte de départ
-TransferDialog.to.valueDate.tooltip=Entrez ici la date de valeur pour le compte d'arrivée
-TransferDialog.from.title=A partir
-TransferDialog.to.title=Vers
-TransferDialog.error.accountAreEquals=Ce bouton est désactivé car les comptes de départ et d'arrivée sont identiques
-TransferDialog.error.amountIsNotPositive=Ce bouton est désactivé car le montant du transfert est négatif ou nul
-TransferDialog.errorValueDate=Ce bouton est désactivé car la date de valeur dans le panneau "{0}" est incorrecte
+TransferDialog.menu=Neuer Transfer
+TransferDialog.title=Neuer Transfer
+TransferDialog.needsTwoAccounts=Ein Transfer erfordert mindestens zwei Konten
+TransferDialog.amount=Geben Sie hier den Betrag des Transfers ein
+TransferDialog.from.account.tooltip=W\u00e4hlen Sie in diesem Men\u00fc aus, von welchem Konto der Betrag abgezogen wird
+TransferDialog.to.account.tooltip=W\u00e4hlen Sie in diesem Men\u00fc das Empf\u00e4ngerkonto aus
+TransferDialog.from.valueDate.tooltip=Geben Sie hier das Abbuchungsdatum ein
+TransferDialog.to.valueDate.tooltip=Geben Sie hier das Wertstellungsdatum des Empf\u00e4ngerkontos ein
+TransferDialog.from.title=Von
+TransferDialog.to.title=Nach
+TransferDialog.error.accountAreEquals=Diese Taste ist gesperrt, weil Abbuchungs- und Empfangskonto identisch sind
+TransferDialog.error.amountIsNotPositive=Diese Taste ist gesperrt, weil der Transferbetrag negativ oder Null ist
+TransferDialog.errorValueDate=Diese Taste ist deaktiviert, weil das Datum im Feld "{0}" ung\u00fcltig ist
 #The two following lines are the description of the transactions
 #example: For a transfer from account A to B, the description of the transaction in A account will be "To B"
-TransferDialog.from.description=Vers {0}
-TransferDialog.to.description=De {0}
+TransferDialog.from.description=Nach {0}
+TransferDialog.to.description=Von {0}
 
 #----------------------------------
 #In the LaunchState tab of the preference panel, a new checkbox to remember how table rows are sorted 
-PreferencesDialog.startState.rowsSortKeys=Conserver l'ordre de tri des lignes
-PreferencesDialog.StartState.rowsSortKeys.tooltip=Cochez cette case pour que l'ordre de tri des lignes soit conservé d'une éxecution à l'autre
+PreferencesDialog.startState.rowsSortKeys=Zeilensortierung beibehalten
+PreferencesDialog.StartState.rowsSortKeys.tooltip=W\u00e4hlen Sie diese Option, um die aktuelle Sortierung als Standard beim n\u00e4chsten Programmstart beizubehalten
 
 #----------------------------------
 #New preference sub-panel to set the background colors of the transaction table
-MainFrame.Transactions.Preferences.customBackground.title=Utiliser des couleurs de fond personnalisées
-MainFrame.Transactions.Preferences.customBackground.tooltip=Cochez cette case pour utiliser des couleurs personnalisées
-MainFrame.Transactions.Preferences.expenseSample=Dépense
-MainFrame.Transactions.Preferences.receiptSample=Recette
-MainFrame.Transactions.Preferences.changeExpenseBackground.title=Changer le fond pour les dépenses
-MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Cliquez ici pour choisir la couleur du fond pour les dépenses
-MainFrame.Transactions.Preferences.changeReceiptBackground.title=Changer le fond pour les recettes
-MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Cliquez ici pour choisir la couleur du fond pour les recettes
+MainFrame.Transactions.Preferences.customBackground.title=Eigene Hintergrundfarben verwenden
+MainFrame.Transactions.Preferences.customBackground.tooltip=W\u00e4hlen Sie diese Option, wenn Sie die Hintergrundfarben selbst w\u00e4hlen m\u00f6chten
+MainFrame.Transactions.Preferences.expenseSample=Ausgabe
+MainFrame.Transactions.Preferences.receiptSample=Einnahme
+MainFrame.Transactions.Preferences.changeExpenseBackground.title=Hintergrundfarbe f\u00fcr Ausgaben \u00e4ndern
+MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Klicken Sie hier, um die Farbe f\u00fcr Ausgaben zu w\u00e4hlen
+MainFrame.Transactions.Preferences.changeReceiptBackground.title=Hintergrundfarbe f\u00fcr Einnahmen \u00e4ndern
+MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Klicken Sie hier, um die Farbe f\u00fcr Einnahmen zu w\u00e4hlen
 
